--- a/_config.yml
+++ b/_config.yml
@@ -2,33 +2,94 @@
 remote_theme: chrisrhymes/bulma-clean-theme
 github: [metadata]
 packages_official:
-  - kernel
-  - kernel-app
-  - autowire
-  - dependency-injection
-  - deprecation-supports
-  - kernel-boot-configuration
-  - kernel-boot-dependency
-  - kernel-boot-plugin-depended
-  - plugin-configuration-helper
-  - plugin-http-boot
-  - plugin-http-core
-  - plugin-http-exceptions
-  - plugin-http-exceptions-dev
-  - plugin-http-logger
-  - plugin-http-middleware
-  - plugin-http-pack
-  - plugin-http-router-code
-  - plugin-locator
-  - plugin-logger-core
-  - plugin-logger-monolog
-  - plugin-twig
-  - plugin-console
-  - plugin-doctrine
-  - plugin-dto
-  - plugin-elastic
-  - plugin-event-emitter
-  - plugin-filesystem
-  - plugin-filesystem-local
-  - plugin-filesystem-s3
-  - plugin-uuid
+  -
+    name: packagist
+    github: micro-kernel
+  -
+    name: kernel-app
+    github: micro-kernel-app
+  -
+    name: autowire
+    github: container-autowire
+  -
+    name: dependency-injection
+    github: dependency-injection
+  -
+    name: deprecation-supports
+    github: deprecation-supports
+  -
+    name: kernel-boot-configuration
+    github: kernel-boot-configuration
+  -
+    name: kernel-boot-dependency
+    github: kernel-boot-dependency
+  -
+    name: kernel-boot-plugin-depended
+    github: kernel-boot-plugin-depended
+  -
+    name:  plugin-configuration-helper
+    github: plugin-configuration-helper
+  -
+    name:  plugin-http-boot
+    github: http-boot
+  -
+    name:  plugin-http-core
+    github: http-core
+  -
+    name:  plugin-http-exceptions
+    github: http-exceptions
+  -
+    name:  plugin-http-exceptions-dev
+    github: http-exceptions-dev
+  -
+    name:  plugin-http-logger
+    github: http-logger
+  -
+    name:  plugin-http-middleware
+    github: http-middleware
+  -
+    name:  plugin-http-pack
+    github: http-pack
+  -
+    name:  plugin-http-router-code
+    github: http-router-code
+  -
+    name:  plugin-locator
+    github: plugin-locator
+  -
+    name:  plugin-logger-core
+    github: plugin-logger-core
+
+  -
+    name:  plugin-logger-monolog
+    github: plugin-logger-monolog
+  -
+    name:  plugin-twig
+    github: plugin-twig
+  -
+    name:  plugin-console
+    github: plugin-console
+  -
+    name:  plugin-doctrine
+    github: plugin-doctrine
+  -
+    name:  plugin-dto
+    github: plugin-dto
+  -
+    name:  plugin-elastic
+    github: plugin-elastic
+  -
+    name:  plugin-event-emitter
+    github: plugin-event-emitter
+  -
+    name:  plugin-filesystem
+    github: plugin-filesystem
+  -
+    name:  plugin-filesystem-local
+    github: plugin-filesystem-local
+  -
+    name:  plugin-filesystem-s3
+    github: plugin-filesystem-s3
+  -
+    name:  plugin-uuid
+    github: plugin-uuid
