--- a/_config.yml
+++ b/_config.yml
@@ -72,9 +72,9 @@ packages_official:
   -
     name:  plugin-doctrine
     github: plugin-doctrine
-  -
-    name:  plugin-dto
-    github: plugin-dto
+#  -
+#    name:  plugin-dto
+#    github: plugin-dto
 #  -
 #    name:  plugin-elastic
 #    github: plugin-elastic
