--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,10 @@ packages_official:
   -
     name:  plugin-twig
     github: plugin-twig
-  -
+  - 
+    name: plugin-twig-webpack
+    github: webpack-encore-plugin
+    
     name:  plugin-console
     github: plugin-console
   -
