--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -1,4 +1,4 @@
-- label: GETTING STARTED
+- label: БЫСТРЫЙ СТАРТ
   items:
     - name: Установка
       link: /docs/getting-started/installation
@@ -6,7 +6,7 @@
       link: /docs/getting-started/docker
     - name: Создание первого приложения
       link: /docs/getting-started/building-first-app
-- label: ARCHITECTURE
+- label: АРХИТЕКТУРА
   items:
 #    - name: Kernel
 #      link: /docs/architecture/kernel
