--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -20,6 +20,8 @@
   items:
    - name: Ядро
      link: /docs/plugins/micro/plugin-http-core
+   - name: Марщрутизация
+     link: /docs/plugins/micro/plugin-http-router-code
 - label: КОМПОНЕНТЫ
   items:
     - name: Список
