--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -20,7 +20,7 @@
   items:
    - name: Ядро
      link: /docs/plugins/micro/plugin-http-core
-   - name: Марщрутизация
+   - name: Маршрутизация
      link: /docs/plugins/micro/plugin-http-router-code
 - label: КОМПОНЕНТЫ
   items:
