--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -26,6 +26,8 @@
      link: /docs/plugins/micro/plugin-http-router-code
    - name: Middleware
      link: /docs/plugins/micro/plugin-http-middleware
+   - name: Обработка ошибок
+     link: /docs/plugins/micro/plugin-http-exceptions
 - label: КОМПОНЕНТЫ
   items:
     - name: Список
