--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -16,6 +16,12 @@
 #      link: /docs/architecture/http
     - name: Плагины
       link: /docs/architecture/plugins
+- name: Логирование
+  items:
+    - name: Ядро
+      link: /docs/plugin/micro/plugin-logger-core
+    - name: Адаптер Monolog
+      link: /docs/plugin/micro/plugin-logger-monolog
 - label: Cli
   items:
     - name: Интерфейс cli
