--- a/_data/docs_menu.yml
+++ b/_data/docs_menu.yml
@@ -16,7 +16,7 @@
 #      link: /docs/architecture/http
     - name: Плагины
       link: /docs/architecture/plugins
-- name: Логирование
+- label: ЛОГИРОВАНИЕ
   items:
     - name: Ядро
       link: /docs/plugin/micro/plugin-logger-core
